--- a/Tasks-Backend/tasks.json
+++ b/Tasks-Backend/tasks.json
@@ -2,7 +2,7 @@
     {
         "id": 1,
         "title": "Do laundry",
-        "description": "Have to do laundry today",
+        "description": "Have to do laundry today.",
         "due_date": "2024-10-10"
     },
     {
